--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,4 +1,3 @@
-// filepath: /Users/sayantansaha/Downloads/QAT.AI/JenkinsFile
 pipeline {
     agent any
     stages {
@@ -9,11 +8,24 @@ pipeline {
                 '''
             }
         }
+        stage('Clean Workspace') {
+            steps {
+              deleteDir() // Deletes all files in the workspace
+            }
+        }
+        stage('Debug Workspace') {
+            steps {
+                sh '''
+                echo "Listing workspace contents:"
+                ls -la
+                '''
+            }
+        }
         stage('Run Test') {
             steps {
                 sh '''
                 chmod +x ./mvnw
-                ./mvn clean test
+                ./mvnw clean test
                 '''
             }
         }
