--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,6 +1,19 @@
 pipeline {
     agent any
     stages {
+        stage('Checkout SCM') {
+            steps {
+                checkout scm
+            }
+        }
+        stage('Debug Checkout') {
+    steps {
+        sh '''
+        echo "Debugging repository contents:"
+        ls -la
+        '''
+    }
+}
         stage('Install JDK-17') {
             steps {
                 sh '''
@@ -10,7 +23,7 @@ pipeline {
         }
         stage('Clean Workspace') {
             steps {
-              deleteDir() // Deletes all files in the workspace
+                deleteDir()
             }
         }
         stage('Debug Workspace') {
